public static class AnimationConsts
{
    public const string VELOCITY = "Velocity";
    public const string VELOCITY_MULT = "WalkingMultiplier";

    public const string GATHER_PLANT = "PickFruit";
    public const string GATHER_PLANT_MULT = "PickFruitMultiplier";

    public const string CHOP_TREE = "ChopTree";
    public const string CHOP_TREE_MULT = "ChopTreeMultiplier";

    public const string ANIMATION_GATHER_PLANT_NAME = "Pick Fruit";
    public const string ANIMATION_CHOP_TREE_NAME = "ChopTree";

    public const string ANIMATION_SIMPLE_ATTACK = "SimpleAttack";
}